# docq-qs

./: .gitignore  Dockerfile  README.md  admin.yaml  config.yaml  local.sh  nginx.conf  pyproject.toml  run.sh  secrets.toml.example  staff.yaml  test.sh  validate.sh
.github/workflows/: azure.yml.unused  build.yml  provision.yml.unused  publish.yml
deploy/aws/cdk-app/: README.md  package-lock.json  tsconfig.json
deploy/aws/cdk-app/lib/: cdk-app-stack.ts
deploy/aws/cdk-app/lib/dockerrun-docq/: Dockerrun.aws.json
deploy/aws/cdk-app/lib/dockerrun-test/: Dockerrun.aws.json
deploy/azure/: appservice.json  containerinstances.json  deploy.sh  template.json
deploy/azure/app-service-container/: deploy.sh  parameters.json  template.json
docs/: secrets.toml.example
ml-models/huggingface/: Dockerfile  Makefile
poetry_demo/: __init__.py  brain.py  data.py  eventloop.py  quickstart.py
source/: __init__.py  brain.py  helper.py  processing.py
tests/: conftest.py  docker-compose.yml  test_brain.py  test_eventdriven.py  test_eventloop.py  test_quickstart.py
web/: Admin.py  Hello.py
web/pages/: 1_Admin.py  1_Ask.py  1_Mind_Map.py  2_Chat.py
