[tool.poetry]
name = "docq-qs"
version = "0.1.0"
description = "Quickstart for Docq"
authors = ["Chen Wang <dev@chenwang.org>"]
readme = "README.md"
packages = [{include = "source"}]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langchain = "^0.0.142"
openai = "^0.27.4"
pypdf = "^3.8.0"
chromadb = "^0.3.21"
tiktoken = "^0.3.3"
confluent-kafka = "^2.1.0"
wikipedia = "^1.4.0"
streamlit = "^1.21.0"
streamlit-authenticator = "^0.2.1"
cohere = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.2.0"
watchdog = "^3.0.0"
setuptools = "^67.7.1"


[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.1"
pytest-docker = "^1.0.1"

[tool.pytest.ini_options]
addopts = "-s"

[tool.black]
line-length = 120
target-version = ['py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
